--- a/www/css/style.css
+++ b/www/css/style.css
@@ -18,11 +18,12 @@
 .item.hero {
   padding: 0;
   border-color: #090119;
-  height: 80px;
+  height: 100px;
   background-color: #090119;
 }
   .item.hero img {
     margin-top: -22px;
+    margin-left: -5%;
   }
 
   .item.hero .hero-container {
@@ -31,7 +32,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    padding-left: 200px;
+    padding-left: 50%;
     padding-top: 10px;
     background: linear-gradient(to right, rgba(255,0,0,0) 35%, RGBA(9, 1, 25, 1) 50%);
   }
@@ -41,7 +42,7 @@
       text-transform: uppercase;
       font-weight: 400;
       color: white;
-      font-size: 20pt;
+      font-size: 16pt;
     }
 
     .item.hero .hero-container h2 {
@@ -49,11 +50,12 @@
       text-transform: uppercase;
       font-weight: 400;
       color: #8eb1bc;
-      font-size: 10pt;
+      font-size: 8pt;
     }
 
 span.tab-title {
   font-family: 'Metronic';
   text-transform: uppercase;
   font-weight: 700;
+  font-size: 10pt;
 }
