--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,7 +3,7 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-color-active-positive">
+<ion-tabs class="tabs-icon-only tabs-color-active-positive">
 
   <!-- Dashboard Tab -->
   <ion-tab title="Heroes" href="#/tab/dash">
@@ -20,5 +20,8 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
-
+  <!-- Account Tab -->
+  <ion-tab icon-on="ion-gear-a" href="#/tab/configuration" icon-off="ion-gear-a">
+    <ion-nav-view name="tab-configuration"></ion-nav-view>
+  </ion-tab>
 </ion-tabs>
