--- a/www/templates/tab-configuration.html
+++ b/www/templates/tab-configuration.html
@@ -3,6 +3,7 @@
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" >
         <h2>Celso Wo</h2>
+        <h2>Rodrigo Camargo</h2>
       </ion-item>
     </ion-list>
   </ion-content>
