--- a/www/templates/tab-configuration.html
+++ b/www/templates/tab-configuration.html
@@ -4,6 +4,9 @@
       <ion-item class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" >
         <h2>Celso Wo</h2>
       </ion-item>
+      <ion-item class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" >
+        <h2>Wayne</h2>
+      </ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
