'update_tab_configuration'

--- a/www/templates/tab-configuration.html
+++ b/www/templates/tab-configuration.html
@@ -3,6 +3,8 @@
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" >
         <h2>Celso Wo</h2>
+      </ion-item>
+      <ion-item class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" >
         <h2>Rodrigo Camargo</h2>
       </ion-item>
     </ion-list>
