add diego and thiago names

--- a/www/templates/tab-configuration.html
+++ b/www/templates/tab-configuration.html
@@ -16,6 +16,12 @@
       <ion-item class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" >
         <h2>Larissa Simões</h2>
       </ion-item>
+      <ion-item class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" >
+        <h2>Thiago garotinho</h2>
+      </ion-item>
+      <ion-item class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" >
+        <h2>Diego Sonsim</h2>
+      </ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
