files path fixed

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -15,7 +15,7 @@
   <ion-side-menu side="left" class="heroesdex">
 
     <ion-content>
-      <img class="logo" ng-src="/images/logos/logo@2x.png"/>
+      <img class="logo" ng-src="images/logos/logo@2x.png"/>
       <ion-list>
         <ion-item menu-close href="#/app/heroes">
           Heroes
