--- a/www/templates/heroes/heroes-detail.html
+++ b/www/templates/heroes/heroes-detail.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{hero.name}}">
+<ion-view view-title="{{viewTitle}}">
     <ion-pane>
       <ion-tabs class="tabs-top">
         <ion-tab title="Info" >
