Images and JS for the battlegrounds

--- a/www/templates/battlegrounds/battlegrounds.html
+++ b/www/templates/battlegrounds/battlegrounds.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Battlegrounds">
   <ion-content>
-    battlegrounds!
+    {{battlegrounds.name}}
   </ion-content>
 </ion-view>
