--- a/www/templates/heroes/heroes-detail-talents.html
+++ b/www/templates/heroes/heroes-detail-talents.html
@@ -4,7 +4,7 @@
         <ion-tab title="Lvl 1" >
             <ion-nav-view name="tab-tab2">
               <ion-content>
-                <div ng-include="'templates/heroes/talents/talent-description'">
+                <div ng-include="'templates/heroes/talents/talent-description.html'">
                 </div>
               </ion-content>
             </ion-nav-view>
@@ -13,7 +13,7 @@
         <ion-tab title="Lvl 4" >
             <ion-nav-view name="tab-tab2">
                 <ion-content>
-                  <div ng-include="'templates/heroes/talents/talent-description'">
+                  <div ng-include="'templates/heroes/talents/talent-description.html'">
                   </div>
                 </ion-content>
             </ion-nav-view>
@@ -22,7 +22,7 @@
         <ion-tab title="Lvl 7" >
             <ion-nav-view name="tab-tab2">
                 <ion-content>
-                  <div ng-include="'templates/heroes/talents/talent-description'">
+                  <div ng-include="'templates/heroes/talents/talent-description.html'">
                   </div>
                 </ion-content>
             </ion-nav-view>
@@ -31,7 +31,7 @@
         <ion-tab title="Lvl 10" >
             <ion-nav-view name="tab-tab2">
                 <ion-content>
-                  <div ng-include="'templates/heroes/talents/talent-description'">
+                  <div ng-include="'templates/heroes/talents/talent-description.html'">
                   </div>
                 </ion-content>
             </ion-nav-view>
@@ -39,7 +39,7 @@
         <ion-tab title="Lvl 13" >
             <ion-nav-view name="tab-tab2">
                 <ion-content>
-                  <div ng-include="'templates/heroes/talents/talent-description'">
+                  <div ng-include="'templates/heroes/talents/talent-description.html">
                   </div>
                 </ion-content>
             </ion-nav-view>
@@ -47,7 +47,7 @@
         <ion-tab title="Lvl 16" >
             <ion-nav-view name="tab-tab2">
                 <ion-content>
-                  <div ng-include="'templates/heroes/talents/talent-description'">
+                  <div ng-include="'templates/heroes/talents/talent-description.html'">
                   </div>
                 </ion-content>
             </ion-nav-view>
@@ -55,7 +55,7 @@
         <ion-tab title="Lvl 20" >
             <ion-nav-view name="tab-tab2">
                 <ion-content>
-                  <div ng-include="'templates/heroes/talents/talent-description'">
+                  <div ng-include="'templates/heroes/talents/talent-description.html'">
                   </div>
                 </ion-content>
             </ion-nav-view>
